# my-first-juce-with-cmake

./: .gitignore  CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/YogoAudioPlugin/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
